# virtual-gamepad

./: .gitignore  LICENSE  README.md
android/: fix_brace.py  fix_dpad.py  fix_dpad_colors.py  fix_dpad_glow.py  fix_dpad_overlap.py  fix_draggable.py  fix_draggable2.py  fix_draggable3.py  fix_draggable4.py  fix_provider.py  fix_syntax.py  remove_wedges.py  settings.gradle.kts  test_log.py
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/virtualgamepad/ui/main/: MainScreenTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/virtualgamepad/: MainActivity.kt  Navigation.kt  NavigationKeys.kt
android/app/src/main/java/com/example/virtualgamepad/data/: DataRepository.kt  LayoutManager.kt  NetworkManager.kt
android/app/src/main/java/com/example/virtualgamepad/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/example/virtualgamepad/ui/connect/: ConnectScreen.kt
android/app/src/main/java/com/example/virtualgamepad/ui/home/: HomeScreen.kt
android/app/src/main/java/com/example/virtualgamepad/ui/main/: MainScreen.kt  MainScreenViewModel.kt
android/app/src/main/java/com/example/virtualgamepad/ui/play/: PlayScreen.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
client/: app.js  index.html  manifest.json  style.css  sw.js
client/dashboard/: dashboard.js  index.html
server/: Cargo.toml
server/src/: device.rs  handlers.rs  lib.rs  main.rs  persistence.rs  state.rs  udp_handler.rs
(+1 files in other folders)
